.kubernetes/pycheck-web/pycheck_depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pycheck
  labels:
    app: pycheck
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pycheck
  template:
    metadata:
      labels:
        app: pycheck
    spec:
      containers:
      - name: pycheck
        image: pycheck:v1.0
        imagePullPolicy: Never
        command: [ "python", "run.py" ]
        ports:
        - containerPort: 5000
