.kubernetes/pycheck-web/pycheck_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pycheck-svc
spec:
  selector:
    app: pycheck
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
