.kubernetes/pycheck-web/pycheck_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pycheck-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: pycheck-svc
              port:
                number: 5000
